--- a/src/styles/rental-modal.scss
+++ b/src/styles/rental-modal.scss
@@ -69,6 +69,7 @@
     flex-direction: column;
     align-items: center;
     gap: 20px;
+
     &__row {
         width: 100%;
         display: flex;
@@ -108,10 +109,23 @@
         padding: 8px;
         border: 1px solid #ccc;
         border-radius: 8px;
+
+        transition: border-color 0.3s ease;
+
+        &:focus {
+            border-color: #0077ff;
+            outline: none;
+        }
     }
 
     &__checkbox {
         margin-right: 10px;
+        transition: border-color 0.3s ease;
+
+        &:focus {
+            border-color: #0077ff;
+            outline: none;
+        }
     }
 
     &__button {
