add: more data, close modal button style, props in rent form

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -15,7 +15,7 @@
 .calendar-wrapper {
     padding: 20px;
     min-height: 100vh;
-    background-color: #ffffff;
+    background-color: #F5F6FB;
     display: flex;
     flex-direction: column;
     gap: 20px;
