--- a/src/styles/rental-modal.scss
+++ b/src/styles/rental-modal.scss
@@ -30,7 +30,6 @@
         width: 100%;
         padding: 20px;
         box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
-        position: relative;
         animation: modalZoomIn 0.3s forwards ease;
 
         &__header {
@@ -38,6 +37,7 @@
             justify-content: space-between;
             align-items: center;
             margin-bottom: 20px;
+
         }
 
         &__title {
@@ -52,10 +52,13 @@
 
         &__close-button {
             font-size: 32px;
-            background: none;
+            padding: 0 8px;
+            background: #429ef321;
             border: none;
+            border-radius: 12px;
             cursor: pointer;
             color: #333;
+            z-index: 9999;
 
             &:hover {
                 color: #429cf3;
