--- a/src/styles/trasport-calendar.scss
+++ b/src/styles/trasport-calendar.scss
@@ -2,46 +2,13 @@
     height: calc(100vh - 120px);
 }
 
-/* Контейнер для кастомного скролла */
-.calendar-container {
-    border-collapse: separate;
-    border-spacing: 0;
-    border-radius: 8px;
-    overflow: auto; /* Измените на auto для появления скроллбара */
-    width: 100%;
-}
-
-/* Кастомный скроллбар для WebKit-браузеров */
-.calendar-container::-webkit-scrollbar {
-    width: 12px; /* Ширина вертикального скроллбара */
-    height: 8px; /* Ширина вертикального скроллбара */
-}
-
-.calendar-container::-webkit-scrollbar-track {
-    background: #e9e9e9; /* Цвет фона трека */
-    border-radius: 8px;
-}
-
-.calendar-container::-webkit-scrollbar-thumb {
-    background: #429cf3; /* Цвет ползунка скроллбара */
-    border-radius: 8px;
-}
-
-.calendar-container::-webkit-scrollbar-thumb:hover {
-    background: #555; /* Цвет ползунка при наведении */
-}
-
-.calendar-container::-webkit-scrollbar-horizontal {
-    height: 8px; /* Высота горизонтального скроллбара */
-}
-
 .transport-calendar {
     border-collapse: separate;
     border-spacing: 0;
-    border-radius: 8px; 
-    overflow: scroll; 
+    border-radius: 8px;
+    overflow: scroll;
     width: 100%;
-    max-width: 100%; 
+    max-width: 100%;
 }
 
 .transport-calendar thead th,
@@ -70,7 +37,7 @@
 .transport-calendar tbody td {
     text-align: center;
     padding: 10px 10px;
-    border-left: 1px solid #e9e9e9; 
+    border-left: 1px solid #e9e9e9;
 }
 
 .transport-calendar tbody td:first-child {
@@ -101,3 +68,12 @@
     border-radius: 0 0 8px 0;
 }
 
+.highlighted-header {
+    background-color: #e8f3fe !important;
+    color: #429cf3 !important;
+}
+
+.highlighted-transport {
+    background-color: #e8f3fe !important;
+    color: #429cf3 !important;
+}
