--- a/src/styles/trasport-calendar.scss
+++ b/src/styles/trasport-calendar.scss
@@ -27,7 +27,7 @@
 
 .transport-calendar thead tr th:first-child {
     border-radius: 8px 0 0 0;
-    min-width: 200px;
+    min-width: 260px;
 }
 
 .transport-calendar thead tr th:last-child {
@@ -36,7 +36,7 @@
 
 .transport-calendar tbody td {
     text-align: center;
-    padding: 10px 10px;
+    padding: 12px 20px;
     border-left: 1px solid #e9e9e9;
 }
 
@@ -75,19 +75,23 @@
 .transport-calendar thead th:first-child {
     position: sticky;
     left: 0;
-    z-index: 1; /* чтобы ячейка была поверх других элементов */
-    border-right: 2px solid #e8f3fe;
-    
+    z-index: 1;
+    border-right: 4px solid #F5F6FB;
+}
+
+.transport-calendar thead th:nth-child(2) {
+}
+
+.transport-calendar tbody td:nth-child(2) {
 }
 
 .transport-calendar tbody td:first-child {
     position: sticky;
     left: 0;
-    z-index: 1; /* чтобы ячейка была поверх других элементов */
+    z-index: 1;
     background: inherit;
-    border-right: 2px solid #e8f3fe;
+    border-right: 4px solid #F5F6FB;
 }
-
 
 .highlighted-header {
     background-color: #e8f3fe !important;
