add: date select range, no data view

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,5 @@
 @import "./scroll.scss";
+@import "./date-range-picker.scss";
 @import "./booking-cell.scss";
 @import "./trasport-calendar.scss";
 @import "./sort-options.scss";
