--- a/src/styles/trasport-calendar.scss
+++ b/src/styles/trasport-calendar.scss
@@ -111,6 +111,19 @@
     width: 100%;
 }
 
+.no-data-placeholder {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    p {
+        text-transform: uppercase;
+        font-size: 24px;
+        text-align: center;
+    }
+}
+
 @media (max-width: 480px) {
     .transport-calendar thead tr th:first-child {
         min-width: 120px;
