add: rental form component

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,6 +4,7 @@
 @import "./trasport-calendar.scss";
 @import "./sort-options.scss";
 @import "./rental-modal.scss";
+@import "./rental-form.scss";
 
 * {
     font:
