--- a/src/styles/sort-options.scss
+++ b/src/styles/sort-options.scss
@@ -6,6 +6,7 @@
     padding: 10px 20px;
     background: #429cf3;
     border-radius: 8px;
+    position: relative;
 
     &__item {
         display: flex;
@@ -45,7 +46,6 @@
 }
 
 .icon-dropdown {
-    position: relative;
     display: flex;
     align-items: center;
 }
@@ -62,7 +62,7 @@
 
 .dropdown-menu {
     position: absolute;
-    top: 200%;
+    top: 100%;
     right: 0;
     background: white;
     border: 1px solid #ddd;
@@ -84,7 +84,6 @@
 }
 
 .calendar-icon {
-    position: relative;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -101,7 +100,8 @@
 
 .calendar-dropdown {
     position: absolute;
-    top: 180%;
+    left: 0;
+    top: 100%;
     box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
     background-color: white;
     border-radius: 8px;
@@ -122,5 +122,11 @@
     .calendar-options {
         flex-direction: column;
         gap: 12px;
+    }
+
+    .calendar-icon {
+        p {
+            font-size: 14px;
+        }
     }
 }
