--- a/src/styles/rental-form.scss
+++ b/src/styles/rental-form.scss
@@ -50,11 +50,18 @@
     }
 
     &__input {
-        flex: 1 1 45%;
-        padding: 8px;
-        border: 1px solid #ccc;
+        padding: 8px 12px;
+        font-size: 16px;
         border-radius: 8px;
+        border: 1px solid #e6e9f1;
         width: 100%;
+    
+        transition: border-color 0.3s ease;
+    
+        &:focus {
+            border-color: #0077ff;
+            outline: none;
+        }
         
 
         transition: border-color 0.3s ease;
