--- a/src/styles/trasport-calendar.scss
+++ b/src/styles/trasport-calendar.scss
@@ -1,5 +1,6 @@
 .calendar-container {
     height: calc(100vh - 120px);
+    // background: #fff;
 }
 
 .transport-calendar {
@@ -34,6 +35,10 @@
     border-radius: 0 8px 0 0;
 }
 
+.transport-calendar {
+    border-bottom: 1px solid #e9e9e9;
+}
+
 .transport-calendar tbody td {
     text-align: center;
     padding: 12px 20px;
@@ -49,7 +54,7 @@
 }
 
 .transport-calendar tbody tr:nth-child(even) {
-    background: #f3f3f3;
+    background: #f9f9f9;
 }
 
 .transport-calendar tbody tr:nth-child(odd) {
@@ -62,6 +67,7 @@
 
 .transport-calendar tbody tr:last-child td:last-child {
     border-radius: 0 0 8px 0;
+
 }
 
 .transport-calendar thead th:first-child {
