--- a/src/styles/sort-options.scss
+++ b/src/styles/sort-options.scss
@@ -23,25 +23,40 @@
     max-width: 300px;
 }
 
-.search-bar .search-icon {
-    position: absolute;
-    left: 10px;
-    color: #aaa;
-}
-
 .search-bar input {
     padding: 8px 12px;
-    padding-left: 36px;
     font-size: 16px;
-    border-radius: 8px;
+    border-radius: 8px 0 0 8px;
     border: 2px solid #e6e9f1;
     width: 100%;
-
     transition: border-color 0.3s ease;
+    line-height: 0;
 
     &:focus {
         border-color: #0077ff;
         outline: none;
+    }
+}
+
+.search-button {
+    background-color: #fff;
+    border: 2px solid #e6e9f1;
+    border-left: none;
+
+    border-radius: 0 8px 8px 0;
+    padding: 5px 12px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    &:hover {
+        background-color: #e7e7e7;
+        border-color: #e7e7e7;
+    }
+
+    svg {
+        color: #429cf3;
     }
 }
 
@@ -92,7 +107,7 @@
     p {
         margin: 0;
         background: #fff;
-        padding: 6px 12px;
+        padding: 8px 12px;
         border-radius: 8px;
         font-size: 16px;
     }
