add: mobile version(bookings card)

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,7 @@
 @import "./scroll.scss";
 @import "./date-range-picker.scss";
 @import "./booking-cell.scss";
+@import "./booking-card.scss";
 @import "./trasport-calendar.scss";
 @import "./sort-options.scss";
 @import "./rental-modal.scss";
