add: ru-eng localization

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,5 @@
 @import "./scroll.scss";
+@import "./language-switcher.scss";
 @import "./date-range-picker.scss";
 @import "./booking-cell.scss";
 @import "./booking-card.scss";
